# euterpe-source

./: .gitignore  .prettierrc  Cargo.toml  README.md  nx.json  package-lock.json  package.json  test.js  tsconfig.base.json
libs/db/: Cargo.toml  README.md
libs/dj/: Cargo.toml
libs/euterpe/: Cargo.toml  README.md
libs/euterpe-web-test/src/: main.ts  styles.css
libs/music-library-web-test/: index.html
libs/music-library-web-test/src/: db.ts  styles.css
libs/player/: Cargo.toml  README.md
libs/player-web-test/: Cargo.toml  index.html
libs/player-web-test/src/: main.ts  styles.css
libs/player/src/: lib.rs
libs/preprocessor/: Cargo.toml
libs/preprocessor/src/: media_process.js
libs/visualizer/: Cargo.toml
libs/visualizer-web-test/: project.json  tsconfig.json  vite.config.ts
libs/visualizer-web-test/src/: styles.css
libs/visualizer/src/: index.ts
tools/scripts/: publish.mjs
