[workspace]
members = [
  "libs/dj",
  "libs/euterpe",
  "libs/db",
  "libs/player",
  "libs/preprocessor",
  "libs/visualizer",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.58"
wasm-bindgen = "0.2.92"
futures-signals = "0.3.33"

[workspace.dependencies.web-sys]
version = "0.3.69"
features = ["AudioContext"]
